--- a/aig-dotnet/packages.config
+++ b/aig-dotnet/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CloudBeat.Frameworks.MSTest" version="1.1.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
 </packages>
